# cablecar-mcp-server

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md  TEST_COVERAGE_ANALYSIS.md  claude_desktop_config.json  debug_mcp.py  pyproject.toml  requirements.txt  simple_mcp_test.py  test_mcp_client.py
.claude/: mcp_servers.json  settings.local.json
.claude/agents/: cablecar-clinical-evaluator.md  causal-advisor.md  clinical-evaluator.md  code-generator.md  hypothesis-discovery.md  statistical-reviewer.md  vignette-generator.md
.claude/commands/: analyze.md  dag.md  data-dictionary.md  define-cohort.md  export-code.md  hypothesis.md  load-data.md  new-study.md  predict.md  privacy-check.md  regression.md  report.md  sensitivity.md  subgroup.md  table1.md
.claude/hooks/: audit-logger.sh  block-data-access.sh
cablecar/: __init__.py
cablecar/analysis/: __init__.py  base.py  causal.py  descriptive.py  hypothesis.py  prediction.py  regression.py  sensitivity.py  subgroup.py  survival.py
cablecar/codegen/: __init__.py  engine.py  provenance.py
cablecar/data/: __init__.py  cohort.py  loader.py  store.py
cablecar/evaluation/: __init__.py  agent.py  benchmarks.py  (+8 more)
cablecar_research/: __init__.py  registry.py
docs/: plugin-development-guide.md
scripts/: generate_plugin_template.py  run_benchmark.py
server/: __init__.py  main.py
synthetic/: dgp_generator.py  generator.py
synthetic_data/: __init__.py  generator.py
tests/: __init__.py  conftest.py  test_analysis.py  test_data_import.py  test_mcp_tools.py  test_ml_models.py  test_privacy.py  test_reporting.py
(+82 files in other folders)
